# support-rag-agent2

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: __init__.py  admin.py  agent.py  api.py  config.py  embeddings.py  kb.py  llm_client.py  logging.py  metrics.py  models.py  retriever.py  storage.py
data/: kb.json
eval/: golden.yaml  results.json  results.md  run_eval.py
ingest/: ingest.py
k8s/: agent.yaml  config.env  kustomization.yaml  namespace.yaml  ollama.yaml
scripts/: demo.sh
static/: index.html
templates/admin/: base.html  chats.html  dashboard.html  eval.html  kb.html  kb_form.html  ticket_detail.html  tickets.html
tests/: conftest.py  test_api_contract.py  test_guard.py  test_retriever.py  test_router.py
