[project]
name = "support-rag-agent"
version = "0.1.0"
description = "Agentic RAG customer-support assistant (FastAPI + bge-small + Ollama) on Kubernetes"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Mohamed Elredeny" }]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "ingest", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, comprehensions, pyupgrade, simplify
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]  # line length handled by the formatter

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["fastembed.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
